--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         в любом случае, я обеспечу именно тот результат, которого вы ждете.
                         Свяжитесь со мной, чтобы забронировать время. Вы не пожалеете.
                     </p>
-                    <a class="call-button">
+                    <a href="tel: +996312123456" class="call-button">
                         Позвонить
                     </a>
                 </div>
