added works page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" id="top">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -24,9 +24,9 @@
         <svg class="header__burger" width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0.75 0.5H17.25V2H0.75V0.5ZM0.75 7.25H17.25V8.75H0.75V7.25ZM0.75 14H17.25V15.5H0.75V14Z" fill="#707070FF"/>
         </svg>
-        <span class="header__logo">
+        <a href="#top" class="header__logo">
             HeirCater
-        </span>
+        </a>
         <div class="header__icon">
             <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 5.76825C8.5638 5.76825 5.76825 8.5638 5.76825 12C5.76825 15.4362 8.5638 18.2293 12 18.2293C15.4362 18.2293 18.2293 15.4338 18.2293 12C18.2317 8.5638 15.4362 5.76825 12 5.76825ZM12 15.8536C9.87422 15.8536 8.14641 14.1258 8.14641 12C8.14641 9.87422 9.87422 8.14641 12 8.14641C14.1258 8.14641 15.8536 9.87422 15.8536 12C15.8536 14.1258 14.1258 15.8536 12 15.8536ZM17.0936 0H6.90637C3.09889 0 0 3.09889 0 6.90637V17.0936C0 20.9011 3.09889 24 6.90637 24H17.0936C20.9011 24 24 20.9011 24 17.0936V6.90637C24 3.09889 20.9035 0 17.0936 0ZM21.6243 17.0936C21.6243 19.5907 19.5907 21.6218 17.0936 21.6218H6.90637C4.4093 21.6218 2.37816 19.5907 2.37816 17.0936V6.90637C2.37816 4.4093 4.4093 2.37816 6.90637 2.37816H17.0936C19.5907 2.37816 21.6218 4.4093 21.6218 6.90637V17.0936H21.6243ZM18.3167 3.96764C17.4188 3.96764 16.6859 4.69808 16.6859 5.59838C16.6859 6.49626 17.4164 7.22912 18.3167 7.22912C19.2146 7.22912 19.9474 6.49869 19.9474 5.59838C19.9474 4.69808 19.2146 3.96764 18.3167 3.96764Z" fill="#e7c6bd"/>
@@ -38,9 +38,9 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M7.67391 9.00001L0.836914 15.837L2.16291 17.163L8.99991 10.326L15.8369 17.163L17.1629 15.837L10.3259 9.00001L17.1629 2.16301L15.8369 0.837006L8.99991 7.67401L2.16291 0.837006L0.836914 2.16301L7.67391 9.00001Z" fill="#707070FF"/>
                 </svg>
             </button>
-            <span class="header__nav__logo">
+            <a href="#top" class="header__nav__logo">
                 HeirCater
-            </span>
+            </a>
             <span class="header__nav-item" id="header__main-button">
                 Главная
             </span>
@@ -52,6 +52,9 @@
             </span>
             <span class="header__nav-item" id="header__about-me-button">
                 Обо мне
+            </span>
+            <span class="header__nav-item" id="header__works-button">
+                Наши работы
             </span>
             <span class="header__nav-item" id="header__contacts-button">
                 Контакты
@@ -231,7 +234,7 @@
                         в любом случае, я обеспечу именно тот результат, которого вы ждете.
                         Свяжитесь со мной, чтобы забронировать время. Вы не пожалеете.
                     </p>
-                    <a class="call-button">
+                    <a href="tel: +996312123456" class="call-button">
                         Позвонить
                     </a>
                 </div>
@@ -257,10 +260,62 @@
                         в любом случае, я обеспечу именно тот результат, которого вы ждете.
                         Свяжитесь со мной, чтобы забронировать время. Вы не пожалеете.
                     </p>
-                    <a class="call-button">
+                    <a href="tel: +996312123456" class="call-button">
                         Позвонить
                     </a>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="works">
+        <div class="container">
+            <h1>
+                Наши работы
+            </h1>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-1.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-2.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-3.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-4.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-5.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-6.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-7.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-8.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-9.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-10.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-11.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-12.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-13.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-14.jpg" alt="work">
+            </div>
+            <div class="works__image-wrapper">
+                <img src="images/main/works/photo-15.jpg" alt="work">
             </div>
         </div>
     </div>
