updated call button function

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         в любом случае, я обеспечу именно тот результат, которого вы ждете.
                         Свяжитесь со мной, чтобы забронировать время. Вы не пожалеете.
                     </p>
-                    <a href="tel: +996312123456" class="call-button">
+                    <a class="call-button">
                         Позвонить
                     </a>
                 </div>
@@ -330,7 +330,7 @@
                         в любом случае, я обеспечу именно тот результат, которого вы ждете.
                         Свяжитесь со мной, чтобы забронировать время. Вы не пожалеете.
                     </p>
-                    <a href="tel: +996312123456" class="call-button">
+                    <a class="call-button">
                         Позвонить
                     </a>
                 </div>
@@ -356,7 +356,7 @@
                         в любом случае, я обеспечу именно тот результат, которого вы ждете.
                         Свяжитесь со мной, чтобы забронировать время. Вы не пожалеете.
                     </p>
-                    <a href="tel: +996312123456" class="call-button">
+                    <a class="call-button">
                         Позвонить
                     </a>
                 </div>
